fix scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 8px;
+  width: none;
 }
 
 /* Track */
